# JDTools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  JDTools.sln  license.md  readme.md
JDTools/: Convert800to990.cpp  Convert800toVST.cpp  Convert990to800.cpp  ConvertVSTto800.cpp  InputFile.cpp  InputFile.h  InputFile.hpp  JD-08.hpp  JD-800.hpp  JD-990.hpp  JDTools.aps  JDTools.cpp  JDTools.filters  JDTools.hpp  JDTools.manifest  JDTools.rc  JDTools.vcxproj  PrecomputedTablesVST.h  PrecomputedTablesVST.hpp  PrintPatchData.cpp  SVZ.cpp  SVZ.h  SVZ.hpp  Utils.hpp  WaveformNames.hpp  convert.h  jd800.h  jd990.h  jdvst.h  resource.h
